# Knife

./: CMakeLists.txt  README.md
docs/english/: README.md
src/: main.cpp
src/compiler/: Driver.c
src/front/: AST.cpp  AST.h  Diag.cpp  Diag.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h  Type.cpp  Type.h
src/front/generator/: Assembly.cpp  Assembly.h
src/front/generator/assembly/: x64.cpp  x64.h
src/front/generator/x64/: Assembly.cpp  Assembly.h
src/front/generator/x86/: Assembly.cpp
